# Archives

./: .gitignore  LICENSE  README.md
StaticArchive/: INFO.md  static.bt
StaticArchive/Cpp/: CMakeLists.txt
StaticArchive/Cpp/src/: lib_main.cpp  main.cpp
StaticArchive/Cpp/src/core/: helpers.h++  static.cpp  static.h  static.h++
StaticArchive/Cpp/src/tests/: testSuite1.h++
StaticArchive/Python/: setup.py  static.py  test_static.py
